# func-validator

./: .gitignore  Makefile  Pipfile  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: func-validator-publish.yml  func-validator-unit-tests.yml
docs/: .nav.yml  api.md  customization.md  doc-requirements.txt  index.md
docs/customization/: custom-error-messages.ipynb  custom-validators.ipynb  custom_error_messages.md  custom_validators.md
docs/overrides/: main.html
docs/reference/: collection_validators.md  datatype-validators.md  datatype_validators.md  dependent-argument-validator.md  dependent_argument_validator.md  index.md  numeric_validators.md  text-validators.md  text_validators.md
func_validator/: __init__.py  _func_arg_validator.py  _func_validator.py  _validator.py  _validators.py
func_validator/_validators/: __init__.py  _collection_arg_validators.py  _collection_validators.py  _core.py  _datatype_arg_validators.py  _numeric_arg_validators.py  _numeric_validators.py  _text_arg_validators.py
func_validator/validators/: __init__.py  _core.py  collection_arg_validators.py  datatype_arg_validators.py  dependent_arg_validator.py  dependent_argument_validator.py  numeric_arg_validators.py  text_arg_validators.py
tests/: test_collection_validators.py  test_custom_validators.py  test_datatype_validators.py  test_decorator.py  test_dependent_arg_validator.py  test_main_decorator.py  test_numeric_arg_validators.py  test_numeric_validators.py  test_text_arg_validator.py  test_validator.py
