[build-system]
requires = ['setuptools>=61.0']
build-backend = "setuptools.build_meta"

[project]
name = 'func-validator'
version = "0.1.0"
authors = [{ name = "Patrick Boateng", email = "boatengpato.pb@gmail.com" }]
description = ""
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
dependencies = []
classifiers = [
    'Programming Language :: Python :: 3',
    'License :: OSI Approved :: MIT License',
    'Operating System :: OS Independent',
]

[project.urls]
homepage = "https://github.com/patrickboateng/func-validator"

[tool.setuptools]
packages = ['func_validator']

[project.optional-dependencies]
dev = ['wheel', 'black', 'pytest', 'mypy', 'setuptools']
